--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,6 @@
     "extends": [
         "airbnb-base",
         "plugin:@typescript-eslint/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings",
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
     ],
@@ -23,12 +21,11 @@
     },
     "plugins": [
         "@typescript-eslint",
-        "prettier",
-        "import"
+        "prettier"
     ],
     "rules": {
+        "no-console": "off",
         "class-methods-use-this": "off",
-
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -58,7 +55,7 @@
     },
 
     "settings": {
-        "import/parsers": {
+        "import/resolver": {
           "typescript": {}
         }
       }
