--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
@@ -23,12 +24,16 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.63",
     "tsconfig-paths": "^3.9.0",
-    "typeorm": "^0.2.26"
+    "tsyringe": "^4.3.0",
+    "typeorm": "^0.2.26",
+    "uuidv4": "^6.2.3"
   }
 }
