--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
     ],
     "rules": {
         "no-console": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "no-param-reassign": 0,
         "class-methods-use-this": "off",
         "import/extensions": [
             "error",
