--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,5 @@
 {
+    "name": "default",
     "type":"postgres",
     "host":"localhost",
     "port": 5432,
@@ -6,7 +7,7 @@
     "password":"lucas",
     "database":"cadastro_provi",
     "entities":[
-        "./src/database/entities/*.ts"
+        "./src/modules/users/entities/*.ts"
     ],
     "migrations": [
         "./src/database/migrations/*.ts"
