--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "6.8.0",
@@ -25,9 +26,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cep-promise": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.63",
