Antes de colocar o testes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
       "skipLibCheck": true,
+      "strictNullChecks": false,
       "forceConsistentCasingInFileNames": true
     }
   }
