--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
             }
           ],
           "prettier/prettier": "error",
+          "no-plusplus":"off",
           "camelcase": "off",
           "no-useless-constructor":"off",
           "@typescript-eslint/no-unused-vars": ["error", {
