--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     "rules": {
         "no-console": "off",
         "@typescript-eslint/no-explicit-any": "off",
+        "no-await-in-loop": "off",
+        "no-restricted-syntax": "off",
         "no-param-reassign": 0,
         "class-methods-use-this": "off",
         "import/extensions": [
